@@ -1,6 +1,9 @@
 package com.metaverse.workflow.encryption;
 
 import org.springframework.core.io.ClassPathResource;
+
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
@@ -12,8 +15,11 @@ import java.util.Base64;
 public class KeyUtil {
 
     public static PrivateKey loadPrivateKey(String path) throws Exception {
-        String key = new String(Files.readAllBytes(new ClassPathResource(path).getFile().toPath()))
-                .replace("-----BEGIN PRIVATE KEY-----", "")
+        String key;
+        try (InputStream is = new ClassPathResource(path).getInputStream()) {
+            key = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        }
+        key = key.replace("-----BEGIN PRIVATE KEY-----", "")
                 .replace("-----END PRIVATE KEY-----", "")
                 .replaceAll("\\s", "");
         PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(Base64.getDecoder().decode(key));
@@ -21,8 +27,11 @@ public class KeyUtil {
     }
 
     public static PublicKey loadPublicKey(String path) throws Exception {
-        String key = new String(Files.readAllBytes(new ClassPathResource(path).getFile().toPath()))
-                .replace("-----BEGIN PUBLIC KEY-----", "")
+        String key;
+        try (InputStream is = new ClassPathResource(path).getInputStream()) {
+            key = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        }
+        key = key.replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
                 .replaceAll("\\s", "");
         X509EncodedKeySpec spec = new X509EncodedKeySpec(Base64.getDecoder().decode(key));
